Document the two flags where someone installing will see them
They were in the Systemcore page, which is the page you read after something has
gone wrong. Someone following the installation guide - the page you read before
anything has - would never have seen them, and the failure they cause is a robot
that boots normally and dies on the first command a driver schedules.

Now in the install guide with the build.gradle snippet, and in the README, which
is the landing page.

The README also still advertised WPILib 2026.2.1, Java 17 and PhotonVision in
its badges, described the 2027 work as a plan on a branch that no longer exists,
and pointed at the stable docs. All now describe the branch you are actually on,
with a note at the top saying plainly that this is 2.x and to stay on 1.12.0 for
a robot that is competing.

Added the v2.0.0-alpha.1 section to the changelog, including the five renamed
decorators, since a rename is the one thing a reader needs to find quickly.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>